log/build_2025-03-19_10-13-13/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishturn.py", line 82
    direction = current-turn)
                            ^
SyntaxError: unmatched ')'

